--- a/app/templates/watchlist/index.html
+++ b/app/templates/watchlist/index.html
@@ -173,7 +173,7 @@
                 <h5 class="modal-title">📋 Opprett Ny Watchlist</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
-            <form action="{{ url_for('watchlist.create_watchlist') }}" method="POST">
+            <form action="{{ url_for('watchlist_advanced.create_watchlist') }}" method="POST">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="watchlistName" class="form-label">Navn på watchlist</label>
